force-app/main/default/objects/Settlement__c/Settlement__c.object-meta.xml
<CustomObject>
    <description>Contains settlement details related to a residential loan application</description>
    <label>Settlement</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Settlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>