force-app/main/default/objects/Settlement__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Set when the settlement is initially created</description>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>