force-app/main/default/objects/Settlement__c/fields/Credit_Assessment_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Assessment_Expiry_date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The time at which this assessment expires and is no longer valid.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Assessment Expiry date</label>
    <type>DateTime</type>
</CustomField>