force-app/main/default/objects/Settlement__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Repayment Frequency as selected by Party</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REPAYMENT_FREQUENCY_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_WEEKLY</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_FORTNIGHTLY</fullName>
                <label>Fortnightly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_MONTHLY</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_QUARTERLY</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_HALF_YEARLY</fullName>
                <label>Half Yearly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_YEARLY</fullName>
                <label>Yearly</label>
            </value>
            <value>
                <fullName>REPAYMENT_FREQUENCY_SEASONAL</fullName>
                <label>Seasonal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>