force-app/main/default/objects/Settlement__c/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The last time the settlement data changed</description>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>