force-app/main/default/objects/Settlement__c/fields/Loan_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Loan Application ID</description>
    <label>Loan Application Number</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>