force-app/main/default/objects/Settlement__c/fields/Nominated_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Account Number for nominated account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nominated Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>