force-app/main/default/objects/Settlement__c/fields/Nominated_Account_State__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Account_State__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Confirmed or completed status for Account</description>
    <label>Nominated Account State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>STATE_PENDING_CONFIRMATION</fullName>
                <label>Pending Confirmation</label>
            </value>
            <value>
                <fullName>STATE_COMPLETED</fullName>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>