force-app/main/default/objects/Settlement__c/fields/Nominated_Account_Version__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Account_Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The version of this loan settlement nominated account</description>
    <label>Nominated Account Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>