force-app/main/default/objects/Settlement__c/fields/Nominated_BSB__c.field-meta.xml
<CustomField>
    <fullName>Nominated_BSB__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>BSB of nominated bank account</description>
    <label>Nominated BSB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>