force-app/main/default/objects/Settlement__c/fields/Nominated_by__c.field-meta.xml
<CustomField>
    <fullName>Nominated_by__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The Details of the Party who has added the Account details on the SettlementAccount.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nominated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>