force-app/main/default/objects/Settlement__c/fields/Nominated_Date__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The Timestamp Details of when the SettlementAccount was Created</description>
    <label>Nominated Date</label>
    <type>DateTime</type>
</CustomField>