force-app/main/default/objects/Settlement__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>owner full name</description>
    <formula>IF( Owner:Queue.QueueName != &apos;&apos; , Owner:Queue.QueueName ,
HYPERLINK( &apos;/&apos; + Owner:User.Id ,(Owner:User.FirstName + &apos; &apos; + Owner:User.LastName) , &apos;_self&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>