force-app/main/default/objects/Settlement__c/fields/Repayment_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Sensitive_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Account number for repayment account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Repayment Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>