force-app/main/default/objects/Settlement__c/fields/Repayment_BSB__c.field-meta.xml
<CustomField>
    <fullName>Repayment_BSB__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>BSB for repayment account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Repayment BSB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>