force-app/main/default/objects/Settlement__c/fields/Repayment_Id__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Unique UUID created to store the Loan Details aka Product Preferences</description>
    <externalId>true</externalId>
    <label>Repayment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>