force-app/main/default/objects/Settlement__c/fields/Requested_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Loan_Amount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Requested Loan amount from the settlement domain</description>
    <label>Requested Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>