force-app/main/default/objects/Settlement__c/fields/Settlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Settlement_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Immutable field representing the ID of the parent Settlement entity.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Settlement Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>