force-app/main/default/objects/Settlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>The current status of the settlement</description>
    <inlineHelpText>- New - New settlement record has been created.  
- Initiated - Settlement flow has started, and necessary checks and verification can now be completed.
- Documents Generated - Customer loan documents are now available in the ANZ Plus App.
- Offer Committed - Customer has electronically accepted their Loan Offer.
- Settling - Settlement is now completed. Loan is now in the process of drawing down.
- Completed - New loan has been generated.
* Please note: some statuses will only be displayed briefly.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>STATE_NEW</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>STATE_INITIATED</fullName>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>STATE_DOCUMENTS_GENERATED</fullName>
                <label>Documents Generated</label>
            </value>
            <value>
                <fullName>STATE_OFFER_COMMITTED</fullName>
                <label>Offer Committed</label>
            </value>
            <value>
                <fullName>STATE_SETTLING</fullName>
                <label>Settling</label>
            </value>
            <value>
                <fullName>STATE_COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>STATE_CANCELLED</fullName>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>