force-app/main/default/objects/Settlement__c/fields/Status_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Last_Modified_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The time this status was applied to the settlement</description>
    <label>Status Last Modified Date</label>
    <type>DateTime</type>
</CustomField>