force-app/main/default/objects/Settlement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Type of settlement</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>TYPE_REFINANCE_OFI</fullName>
                <label>Refinance OFI</label>
            </value>
            <value>
                <fullName>TYPE_REFINANCE_INTERNAL</fullName>
                <label>Refinance Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>