force-app/main/default/objects/Settlement__c/validationRules/VR01_No_Lower_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_No_Lower_Version</fullName>
    <active>true</active>
    <description>Ensure incoming version of the settlement is not lower than version currently in Salesforce</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        PRIORVALUE(Version__c) &gt; Version__c,
        PRIORVALUE(Nominated_Account_Version__c) &gt; Nominated_Account_Version__c,
        PRIORVALUE(Repayment_Account_Version__c) &gt; Repayment_Account_Version__c
    )
)</errorConditionFormula>
    <errorMessage>The version cannot be older than the current value</errorMessage>
</ValidationRule>