force-app/main/default/objects/Settlement__c/validationRules/VR02_Ownership_Handling.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Ownership_Handling</fullName>
    <active>true</active>
    <description>Handles ownership changes for settlement records</description>
    <errorConditionFormula>AND( $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    ISCHANGED(OwnerId),
OR(
  AND($UserRole.DeveloperName = &apos;Settlement_Officer_Lead&apos;,   
      Owner:Queue.DeveloperName &lt;&gt; &apos;Settlements_Queue&apos;, 
      Owner:User.UserRole.DeveloperName &lt;&gt; 
      &apos;Settlement_Officer_Lead&apos;,
      Owner:User.UserRole.DeveloperName &lt;&gt; 
      &apos;Settlement_Officer&apos;
  ),
  AND($UserRole.DeveloperName = &apos;Settlement_Officer&apos;,
    PRIORVALUE(  Owner_Name__c) &lt;&gt; &apos;Settlements Queue&apos;, Owner:Queue.DeveloperName &lt;&gt; &apos;Settlements_Queue&apos;,  OwnerId &lt;&gt;  $User.Id )))</errorConditionFormula>
    <errorMessage>Please assign ownership to a valid user or queue.</errorMessage>
</ValidationRule>