force-app/main/default/objects/Settlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Last_Modified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>