force-app/main/default/objects/Settlement__c/listViews/All_Open_Settlements.listView-meta.xml
<ListView>
    <fullName>All_Open_Settlements</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Last_Modified__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>STATE_COMPLETED,STATE_CANCELLED</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>All Open Settlements</label>
</ListView>