force-app/main/default/objects/Settlement__c/listViews/Settlements_Queue_Settlement.listView-meta.xml
<ListView>
    <fullName>Settlements_Queue_Settlement</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Modified__c</columns>
    <columns>Owner_Name__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>STATE_CANCELLED</value>
    </filters>
    <filterScope>Queue</filterScope>
    <label>Settlements Queue</label>
    <queue>Settlements_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>